Fix: Inconsistent spacing due to changing ram loads As the ram usage fluctuates between 1 to 2 digits, memory-module kept shifting right and left according to the digit at a moment. Fix by swapping their places, since memory usage is stable to 3 digits and less prone to changes
Chore: only give left padding to cpu and memory modules

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -17,7 +17,6 @@ window#waybar {
 
 #clock,
 #network,
-#cpu,
 #pulseaudio,
 #backlight,
 #temperature,
@@ -26,6 +25,11 @@ window#waybar {
 #custom-weather,
 #custom-notification {
     padding: 0 15px;
+}
+
+#cpu,
+#memory {
+		padding-left: 15px;
 }
 
 #battery {
